book/components/fault-injection/details-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-vs
spec:
  hosts:
  - details
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: details
        port:
          number: 8080
    fault:
      # delay:
      #   fixedDelay: 5s
      #   percentage:
      #     value: 100
      abort:
        httpStatus: 500
        percentage:
          value: 100
